# esp32_mqtt_sensor

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.beetle  sdkconfig.defaults.seeed_xiao
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc_manager.c  adc_manager.h  ap_config.c  battery.c  common.c  common.h  config.c  main.c  mqtt.c  ota.c  ota.h  tl136.c  tl136.h  vl53l0x.c  vl53l0x.h  vl53l1x.c  vl53l1x.h  wifi.c
main/drivers/: ds18b20.c  ds18b20.h  moisture.c  moisture.h  tl136.c  tl136.h  vl53l0x.c  vl53l0x.h  vl53l1x.c  vl53l1x.h
main/sensors/: distance_sensor.c  moisture_sensor.c  temperature_sensor.c
